# LocalRAG

./: .gitignore  LICENSE  README.md  pyproject.toml  selfrag.config.json
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  llm-providers.md  project-status.md
sample_docs/: README.md
selfrag/: chunking.py  cli.py  config.py  docx.py  embeddings.py  eval.py  index.py  ingest.py  llm.py  llm_probe.py  pdf.py  prompting.py  rerank.py  retrieval.py  util.py  webui.py
